--- a/nav/Info.plist
+++ b/nav/Info.plist
@@ -2,8 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key></key>
+	<string></string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location for game</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>We need to see if you are in range to tag or be tagged! </string>
+	<string>Location for game</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location for game</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
