--- a/nav/Info.plist
+++ b/nav/Info.plist
@@ -4,12 +4,6 @@
 <dict>
 	<key></key>
 	<string></string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Location for game</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Location for game</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location for game</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -24,10 +18,27 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.976962487215-0hmh8dcc4ktr68g8ng3cnitug1k248es</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Location for game</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location for game</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location for game</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
